--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2025.4.26
 click==8.2.1
 distro==1.9.0
 Flask==3.1.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -16,6 +17,7 @@ jiter==0.10.0
 lxml==5.4.0
 MarkupSafe==3.0.2
 openai==1.82.0
+packaging==25.0
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-docx==1.1.2
