--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,10 @@
 [phases.setup]
-nixPkgs = ["python311", "nodejs_18"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-  "pip install -r requirements.txt",
-  "npm install"
-] 
+  "pip install -r requirements.txt"
+]
+
+[phases.start]
+cmd = "gunicorn webapp.app:app" 
