fix: use python3 -m pip for requirements install (Railway pip workaround)

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,7 +8,7 @@ cmds = [
 
 [phases.install]
 cmds = [
-  "pip install -r requirements.txt"
+  "python3 -m pip install -r requirements.txt"
 ]
 
 [phases.start]
